<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rectangulo"
        android:id="@+id/txtRectangulo"
        android:layout_gravity="center_horizontal"
        android:textSize="32dp"
        android:hint="@string/Rectangulo" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ValorBase"
            android:text="Valor de la Base" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cajaBase"
            android:layout_weight="0.37" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ValorAltura"
            android:text="Valor de la Altura" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cajaAltura"
            android:layout_weight="0.36" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Calcular"
            android:onClick="Rectangulo"
            android:text="Calcular" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Borrar"
            android:id="@+id/btnBorrar"
            android:hint="@string/Borrar"
            android:onClick="Borrar"/>
    </LinearLayout>
</LinearLayout>
