<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.mrambaut.tallercasa2.Listar2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Realizadas"
        android:id="@+id/txtRealizadas"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/Realizadas"
        android:textSize="32dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtRealizadas"
        android:layout_centerHorizontal="true"
        android:id="@+id/tblOperaciones"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No"
                android:id="@+id/txtId" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Operacion"
                android:id="@+id/txtOperacion"
                android:hint="@string/Operacion" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Datos"
                android:id="@+id/txtDatos"
                android:hint="@string/Datos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Resultado"
                android:id="@+id/txtResultado"
                android:hint="@string/Resultado" />
        </TableRow>
    </TableLayout>
</RelativeLayout>

