<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.mrambaut.tallercasa2.Cono">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cono"
        android:id="@+id/txtCono"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/Cono"
        android:textSize="36dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/txtCono"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:hint="@string/ValorRadio"
            android:text="Valor del Radio"
            android:textIsSelectable="false"
            android:textSize="20dp" />

        <EditText
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:id="@+id/cajaRadio" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignRight="@+id/linearLayout3"
        android:layout_alignEnd="@+id/linearLayout3"
        android:id="@+id/linearLayout4">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ValorAltura"
            android:text="Valor de la Altura"
            android:textSize="20dp" />

        <EditText
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:id="@+id/cajaAltura" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:hint="@string/Calcular"
            android:onClick="Cono"
            android:text="Calcular"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Borrar"
            android:id="@+id/btnBorrar"
            android:hint="@string/Borrar"
            android:onClick="BorrarCono"/>
    </LinearLayout>
</RelativeLayout>

