<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.mrambaut.tallercasa2.Esfera">

    <TextView
        android:id="@+id/txtEsfera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/Esfera"
        android:text="Esfera"
        android:textSize="36dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEsfera"
        android:layout_alignRight="@+id/txtEsfera"
        android:layout_alignEnd="@+id/txtEsfera"
        android:id="@+id/txtValorRadio">

        <TextView
            android:id="@+id/txtValorRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ValorRadio"
            android:text="Valor del Radio" />

        <EditText
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:id="@+id/cajaRadio" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtValorRadio"
        android:layout_alignLeft="@+id/txtValorRadio"
        android:layout_alignStart="@+id/txtValorRadio">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Calcular"
            android:onClick="Esfera"
            android:text="Calcular" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Borrar"
            android:onClick="BorrarEsfera"
            android:text="Borrar" />
    </LinearLayout>
</RelativeLayout>

