<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.mrambaut.tallercasa2.Cubo">

    <TextView
        android:id="@+id/txtCubo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/Cubo"
        android:text="Cubo"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCubo"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout6">

        <EditText
            android:id="@+id/txtValorArista"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ValorArista"
            android:inputType="textPersonName"
            android:text="Valor de la Arista" />

        <EditText
            android:id="@+id/cajaArista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout6"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Calcular"
            android:text="Calcular"
            android:onClick="Cubo"/>

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Borrar"
            android:text="Borrar"
            android:onClick="BorrarCubo"/>
    </LinearLayout>
</RelativeLayout>

