<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtCirculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Circulo"
        android:text="Circulo"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Resultado"
        android:text="Resultado"
        android:textSize="24dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/txtArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Area"
            android:text="Area: "
            android:textSize="20dp" />

        <EditText
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtCajaResultado"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ok"
        android:id="@+id/btnOk"
        android:layout_gravity="center_horizontal"
        android:onClick="VolverCirculo"/>

</LinearLayout>
