<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.mrambaut.tallercasa2.Cono2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cono"
        android:id="@+id/txtCono"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/Cono"
        android:textSize="36dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCono"
        android:layout_centerHorizontal="true"
        android:hint="@string/Resultado"
        android:text="Resultado"
        android:textSize="24dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Volumen"
            android:id="@+id/txtVolumen"
            android:hint="@string/Volumen"
            android:textSize="16dp" />

        <EditText
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtCajaResultado" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ok"
        android:id="@+id/btnOk"
        android:layout_below="@+id/linearLayout5"
        android:layout_centerHorizontal="true"
        android:onClick="VolverCono"/>
</RelativeLayout>

