<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.mrambaut.tallercasa2.Cubo2">

    <TextView
        android:id="@+id/txtCubo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/Cubo"
        android:text="Cubo"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCubo"
        android:layout_centerHorizontal="true"
        android:hint="@string/Resultado"
        android:text="Resultado"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtResultado"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout7">

        <TextView
            android:id="@+id/txtVolumen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.06"
            android:hint="@string/Volumen"
            android:text="Volumen: "
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtCajaResultado"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtResultado"
        android:layout_alignRight="@+id/txtResultado"
        android:layout_below="@+id/linearLayout7"
        android:text="Ok"
        android:onClick="VolverCubo"/>
</RelativeLayout>

