<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.mrambaut.tallercasa2.Esfera2">

    <TextView
        android:id="@+id/txtEsfera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/Esfera"
        android:text="Esfera"
        android:textSize="36dp" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtEsfera"
        android:layout_alignStart="@+id/txtEsfera"
        android:layout_below="@+id/txtEsfera"
        android:hint="@string/Resultado"
        android:text="Resultado"
        android:textSize="24dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtResultado"
        android:layout_alignLeft="@+id/txtResultado"
        android:layout_alignStart="@+id/txtResultado"
        android:id="@+id/txtValorRadio">

        <TextView
            android:id="@+id/txtVolumen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Volumen"
            android:text="Volumen"
            android:textSize="20dp" />

        <EditText
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtCajaResultado" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ok"
        android:id="@+id/idOk"
        android:layout_below="@+id/txtValorRadio"
        android:layout_alignLeft="@+id/txtValorRadio"
        android:layout_alignStart="@+id/txtValorRadio"
        android:onClick="VolverEsfera"/>
</RelativeLayout>

