<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.mrambaut.tallercasa2.Circulo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Circulo"
        android:id="@+id/txtCirculo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="Circulo"
        android:textSize="36dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCirculo"
        android:layout_alignRight="@+id/txtCirculo"
        android:layout_alignEnd="@+id/txtCirculo"
        android:id="@+id/txtValorRadio">

        <TextView
            android:id="@+id/txtValorRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtCirculo"
            android:hint="@string/ValorRadio"
            android:text="Valor del Radio"
            android:textSize="20dp" />

        <EditText
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtCajaRadio" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtValorRadio"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Calcular"
            android:onClick="Circulo"
            android:text="Calcular" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Borrar"
            android:onClick="Borrar"
            android:text="Borrar" />
    </LinearLayout>

</RelativeLayout>
